fix images not showing in single rendered pates

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,30 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css');
 
 body {
-  margin: 0 auto;
   font-family: system-ui, sans-serif;
   font-size: 1.1em;
   line-height: 1.2;
   color: #161616;
   background-color: #4c566a;
-
-}
-
-.container {
-  display: flex;
-  justify-content: center; 
+height: 100vh;
   max-width: 900px;
+  margin: auto; 
 }
-.layout {
 
+.layout {
   display: grid;
   grid-template-columns: 12rem 1fr;
   grid-template-areas:
     "sidebar header"
     "sidebar main";
-  height: 100vh;
+  
 }
 
 .sidebar {
   grid-area: sidebar;
   display: flex;
   flex-direction: column;
-  /* position: fixed; */
+  position: fixed; 
   top: 0;
   width: 12rem;
   height: 100vh;
@@ -68,6 +63,7 @@ body {
 
 .byline a {
   color: #d8dee9;
+  margin: 0 0.3rem;
 }
 .nav {
   margin-top: 8em;
@@ -124,6 +120,7 @@ body {
 .nav-bottom a {
   color: inherit;
   text-decoration: inherit;
+  margin: 0.4rem;
 } 
 
 
@@ -138,6 +135,8 @@ body {
 }
 
 .main {
+position: relative;
+  top: 0;
   grid-area: main;
   padding: 1.25rem;
   background-color: #d8dee9;
